aggiunto test mancante (unicità nickname)